[metadata]
name = checkreg-zhongpu
version = 0.0.2
author = Zhongpu Chen
author_email = chenloveit@gmail.com
description = A package to check whether it has been registered
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ChenZhongPu/checkReg
project_urls =
    Bug Tracker = https://github.com/ChenZhongPu/checkReg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pycryptodome
    requests

[options.packages.find]
where = src